--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassname=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+spring.jpa.properties.hibernate.show_sql=false
+spring.jpa.properties.hibernate.format_sql=true
+spring.datasource.sql-script-encoding=UTF-8
